# agentic_coding

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  pyproject.toml  setup.sh
.cursor/rules/: chat-logging.mdc  code-style.mdc  python.mdc  tauri.mdc  uv.mdc
.gemini/: settings.json
.gemini/commands/: translate.toml
home/.claude/output-styles/: frontend-developer.md  gemini-code-reviewer.md  prd-writer.md  ui-ux-designer.md
