[project]
name = "python-cursor-rules"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "pytest==8.4.1",
]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
markers = [
    "manual", # manual test case
]
env = [
    "PYTHONPATH = src:tests"
]

[tool.coverage.run]
source = ['src']
relative_files = true
omit = [
    "**/__init__.py",
    "api/**/tests/*.py",
    "api/tests/**/*.py",
    ]
command_line = "-m pytest -v -s tests/ src/ --cov=src --cov-report xml:coverage.xml"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E501"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"